--- a/QO/Hidrocarbonetos/HidrocarbonetosIII.org
+++ b/QO/Hidrocarbonetos/HidrocarbonetosIII.org
@@ -20,45 +20,48 @@
 :END:
 
 
-#+BEGIN_EXPORT latex
-%{\scriptsize
-\begin{longtable}{NNBBB} 
- \caption{\label{tab:org0baf992}Grupos substituintes orgânicos formados por carbono e hidrogênio}
-\\ \hline
- \cellcolor{green!20} {\bfseries Grupos Alquila}  &  \cellcolor{green!20} &  \cellcolor{green!20} &  \cellcolor{green!20} &  \cellcolor{green!20}\\ \hline
-1 carbono & metil & \chemfig{-CH_3} & \\
- & & \\ 
-2 carbonos & etil & \chemfig{-CH_2-CH_3} & \\
-& & \\ 
-3 carbonos & propril &  \chemfig{-CH_2-CH_2-CH_3}  & isopropil &  \chemfig{-CH([:-90]-CH_3)-CH_3}  \\
-& & \\ 
-4 carbonos & butil &  \chemfig{-CH_2|{(CH_2)_2}CH_3}  & isobutil &  \chemfig{-CH_2-CH([:-90]-CH_3)-CH_3} \\
- & \emph{s}-butil (\emph{sec}-butil) &  \chemfig{-CH([:-90]-CH_3)-CH_2CH_3}  & \emph{t}-butil (\emph{terc}-butil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_3}\\
- & &  \\
- 5 carbonos & pentil &  \chemfig{-CH_2|{(CH_2)_3}CH_3}  & isopentil &  \chemfig{-CH_2-CH_2-CH([:-90]-CH_3)-CH_3} \\
- & neopentil & \chemfig{-CH_2-C([:-90]-CH_3)([:90]-CH_3)-CH_3} & \emph{t}-pentil (\emph{terc}-pentil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH_3}\\ 
 
- \end{longtable}
-%}
+#+begin_export  latex
+\begin{longtblr}[theme=fancy,
+    caption = {Grupos substituintes orgânicos formados por carbono e hidrogênio},
+    %note{a} = {It is the first footnote.},
+    ]{
+        colspec = {c c c c }, colsep = 2mm, hlines = {2pt, white},
+        %row{odd} = {azure8}, row{even} = {gray8},
+        row{1,3,5,7,10,13,16} = {1.5em,azure3,fg=white,font=\bfseries\sffamily},
+        %row{12} = {bg=gray8, font=\bfseries},
+        %rowsep=.2cm,        
+    }
+ \hline
+     % Radical & Estrutura & Radical & Estrutura   \\
+    \SetCell[c=4]{m,8cm} 1 carbono && \\ 
+    & metil &  & \chemfig{-CH_3}  \\ \hline
+    \SetCell[c=4]{m,8cm} 2 carbonos && \\   
+    & etil & \chemfig{-CH_2-CH_3} \\  \hline 
+    \SetCell[c=4]{m,8cm} 3 carbonos &&  \\ 
+    propril &  \chemfig{-CH_2-CH_2-CH_3}  & isopropil &  \chemfig{-CH([:-90]-CH_3)-CH_3}  \\ \hline 
+    \pagebreak
+     \SetCell[c=4]{m,8cm} 4 carbonos && \\ %\hline
+     %\pagebreak 
+    butil &  \chemfig{-CH_2|{(CH_2)_2}CH_3}  & isobutil &  \chemfig{-CH_2-CH([:-90]-CH_3)-CH_3} \\ \hline 
+    \emph{s}-butil (\emph{sec}-butil) &  \chemfig{-CH([:-90]-CH_3)-CH_2CH_3} & \emph{t}-butil (\emph{terc}-butil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_3}
+      \\ \hline 
+     \pagebreak
+    \SetCell[c=4]{m,8cm} 5 carbonos &&& \\
+     pentil &  \chemfig{-CH_2|{(CH_2)_3}CH_3} & isopentil &  \chemfig{-CH_2-CH_2-CH([:-90]-CH_3)-CH_3} \\  \hline
+     neopentil & \chemfig{-CH_2-C([:-90]-CH_3)([:90]-CH_3)-CH_3}  & \emph{t}-pentil (\emph{terc}-pentil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH_3}\\  \hline 
+      \pagebreak
+     \SetCell[c=4,]{m,8cm}Outros grupos & && \\
+      vinil ou etenil & \chemfig{-CH=CH_2}   & isopropenil & \chemfig{-C([:-90]-CH_3)=CH_2}\\ \hline
+      propenil & \chemfig{-CH=CH-CH_3}  & ali ou propen-2-il & \chemfig{-CH_2-CH=CH_2}\\ \hline 
+      \pagebreak
+   \SetCell[c=4,]{m,10cm} Aromáticos &&& \\
+    fenil & \chemfig{-(*6(-=-=-=))}  & naft-1-il & \chemfig{*6(-=(*6(-=-=(-)--))-=-=)}\\ \hline
+    benzil & \chemfig{-CH_2-(*6(-=-=-=))} & naft-2-il & \chemfig{*6(-=(*6(-=-(-)=--))-=-=)}\\
+      \hline 
+\end{longtblr}
 
-#+END_EXPORT 
-
-
-** Outros substituintes
-:PROPERTIES:
-:BEAMER_opt: allowframebreaks
-:END:
-
-#+LATEX: \renewcommand{\arraystretch}{1.5}
-#+ATTR_LATEX: :center nil :environment tabular :align NLBB
-| vinil ou etenil | \chemfig{-CH=CH_2}            | isopropenil        | \chemfig{-C([:-90]-CH_3)=CH_2}        |
-|                 |                               |                    |                                       |
-| propenil        | \chemfig{-CH=CH-CH_3}         | ali ou propen-2-il | \chemfig{-CH_2-CH=CH_2}               |
-|                 |                               |                    |                                       |
-| fenil           | \chemfig{-(**6(------))}      | naft-1-il          | \chemfig{**6(--(**6(----(-)--))----)} |
-|                 |                               |                    |                                       |
-| benzil          | \chemfig{-CH_2-(**6(------))} | naft-2-il          | \chemfig{**6(--(**6(---(-)---))----)} |
-
+#+end_export
 
 ** Hidrocarbonetos Ramificados - Cadeia Principal
 :PROPERTIES:
