--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
-% Created 2024-07-10 Wed 15:54
+% Created 2024-07-20 Sat 18:37
 % Intended LaTeX compiler: lualatex
-\documentclass[presentation]{beamer}
+\documentclass[presentation,professionalfonts,smaller,aspectratio=169]{beamer}
 \usepackage{graphicx}
 \usepackage{longtable}
 \usepackage{wrapfig}
@@ -10,62 +10,824 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
-\usetheme{default}
-\author{fabio}
-\date{\today}
-\title{}
+\date{}
+% \usetheme{minflat}
+\usepackage[portuguese, ]{babel}
+\usepackage{xcolor}
+\usepackage{colortbl}
+\usepackage[tikz]{bclogo}
+\usetikzlibrary{fit,patterns,shadows.blur,shapes,mindmap}
+\usetikzlibrary{arrows,calc,arrows.meta,decorations.markings,shapes.symbols}
+\usetikzlibrary{decorations.pathreplacing, decorations.pathmorphing,calc,arrows,positioning}
+\usepackage{tikzpeople}
+\usepackage{qrcode,hyperref}
+\usepackage{upgreek}
+%\usepackage[version=4]{mhchem}
+\usepackage{tabularray}
+\usepackage{chemfig,chemmacros,elements,chemformula}
+\chemsetup{modules={all}}
+\chemsetup[redox]{pos=top,roman=false}
+\chemsetup[redox]{pos=top}
+\chemsetup{redox/sep=.5em}
+\chemsetup[redox]{explicit-sign=true}
+\NewChemPhase\lqdd{\(\ell\)}
+\NewChemPhase\gr{grafite}
+\NewChemPhase\reac{reação}
+\NewChemState\Enthalpy{symbol=H,superscript=,unit=\kilo\joule}%
+\usepackage{siunitx}
+\setchemfig{fixed length=false, atom sep=2.5em, arrow offset=6pt, scheme debug=false}%,angle increment=30}
+\renewcommand*\printatom[1]{\ensuremath{\mathsf{#1}}} % This line changes the font of the atoms to sans serif
+%%%% QRCODE
+\usepackage{pdfpages}
+\usepackage{mol2chemfig}
+\usepackage{subfig,caption}
+\usepackage{wrapfig}
+\usepackage{enumitem}
+\setitemize{label=\usebeamerfont*{itemize item}%
+\usebeamercolor[fg]{itemize item}
+\usebeamertemplate {itemize item}}
+\usepackage{array,longtable} % ajust colunm table
+\usepackage{cancel}
+\usepackage[controls]{animate}
+\renewcommand{\CancelColor}{\color{red}}
+\newcolumntype{K}{>{\centering\arraybackslash}m{6.5cm}}
+\newcolumntype{L}{>{\centering\arraybackslash}m{5cm}}
+\newcolumntype{B}{>{\centering\arraybackslash}m{2.5cm}}
+\newcolumntype{N}{>{\centering\arraybackslash}m{1.4cm}}
+% custom negrito table
+\newcolumntype{$}{>{\global\let\currentrowstyle\relax}}
+\newcolumntype{^}{>{\currentrowstyle}}
+\newcommand{\rowstyle}[1]{\gdef\currentrowstyle{#1}%
+#1\ignorespaces
+}
+\definecolor{col1}{HTML}{FF7878}
+\definecolor{col2}{HTML}{51B5F8}
+\definecolor{col3}{HTML}{68E1AA}
+\definecolor{col4}{HTML}{B869EA}
+\definecolor{col5}{HTML}{FF5500}
+\definecolor{col6}{HTML}{FFF8E7}
+\definecolor{col7}{HTML}{FF9966}
+\definecolor{col8}{HTML}{9400D3}
+\usepackage[export]{adjustbox}
+\usepackage[skins,most,many]{tcolorbox}
+\usepackage{endiagram}
+\tcbuselibrary{skins,raster,listings,breakable,vignette}
+\newcommand{\zx}[1]{\textcolor{blue!85!red}{\emph{#1}}}
+\newtcolorbox{mybox}[2][]{boxsep=0.5em,left=0.5em,
+colback=blue!5!white, colframe=blue!75!black,
+fonttitle=\bfseries\sffamily,
+colbacktitle=blue!85!red!60,enhanced,
+attach boxed title to top left={yshift=-3mm,xshift=5mm},
+title=#2,#1}
+\newtcolorbox{myrule}[2][]{boxsep=0.5em,left=0.5em,
+colback=green!5!white, colframe=blue!75!black,
+fonttitle=\bfseries\sffamily,
+colbacktitle=blue!85!red!60,enhanced,
+attach boxed title to top left={yshift=-3mm,xshift=5mm},
+title=#2,#1}
+\newtcolorbox{myex}[2][]{boxsep=0.5em,left=0.5em,
+colback=yellow!5!white, colframe=blue!75!black,
+fonttitle=\bfseries\sffamily,
+colbacktitle=blue!85!red!60,enhanced,
+attach boxed title to top left={yshift=-3mm,xshift=5mm},
+title=#2,#1}
+\newtcolorbox[auto counter]{boxex}[2][]{fontupper=\footnotesize,
+colback=white!40,colframe=black,fonttitle=\bfseries,sharp corners,
+title=Exemplo~\thetcbcounter~#1}
+\newcounter{mycounter}
+%%% Colobor
+%%% Example colorbox
+\tcbset{examplebox/.style={enhanced,colback=white,colframe=green!65!black,
+enlarge top by=10mm,
+overlay={%
+\path[fill=blue!65,line width=.4mm] (frame.north west)--++(17mm,0)coordinate(n2)--++(0,8mm)--++(-20mm,0) arc (-90:90:-4mm)--cycle;
+\node at ([shift={(5mm,4mm)}]frame.north west){\color{white}{\textbf{\sffamily Exemplo}}};
+\path[fill=green!65!blue] ([xshift=.4mm]n2)--++(0,8mm)--++(7mm,0)--++(0,-8mm)--cycle;
+\node at ([shift={(4mm,4mm)}]n2){\color{white}{\textbf{\sffamily \themycounter}}};
+\node at ([shift={(18mm,4mm)}]n2){\itshape\textbf{\sffamily Solu\c{c}\~ao}};
+}}}
+%% COnfig tikz molecules
+\usepackage{supertabular}
+\tikzset{
+bal/.style={
+circle, minimum size=2pt, inner sep=0pt,fill=orange,fill opacity=0.5
+},
+rect/.style={
+circle, minimum size=2pt, inner sep=.5pt,fill=red,fill opacity=0.5
+},
+bal2/.style={
+circle, minimum size=2pt, inner sep=0pt,fill=blue,fill opacity=0.5
+},
+bal3/.style={
+circle, minimum size=2pt, inner sep=0pt,fill=yellow,fill opacity=0.5
+}
+}
+\definesubmol\nobond{-[,0.2,,,draw=none]\scriptstyle\color{blue}}
+\newcommand{\re}{\hspace{-1cm}}
+\newcommand{\af}{\hspace{2cm}}
+\graphicspath{{img}{QG/img}{FQ/img}}
+
+\NewTblrTheme{fancy}{
+\SetTblrStyle{caption-tag}{font=\bfseries}
+\SetTblrInner[tblr,longtblr]{rowsep=2.5pt}
+\DefTblrTemplate{firsthead, middlehead,lasthead}{default}{} % <---
+\DefTblrTemplate{contfoot-text}{normal}{\scriptsize\textit{Continued on the next page}}
+\SetTblrTemplate{contfoot-text}{normal}
+}
+\selectlanguage{portuguese}
+%\UseTblrTemplate{caption-tag}{default}{\bfseries}
+\usetheme{minflat}
+\author{Fábio Lima}
+\date{}
+\title{Hidrocarbonetos Ramificados}
 \hypersetup{
- pdfauthor={fabio},
- pdftitle={},
+ pdfauthor={Fábio Lima},
+ pdftitle={Hidrocarbonetos Ramificados},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.3 (Org mode 9.6.15)}, 
- pdflang={English}}
+ pdfcreator={Emacs 29.4 (Org mode 9.6.15)}, 
+ pdflang={En Portuguese}}
 \begin{document}
 
-\begin{frame}{Outline}
+\begingroup
+  \setbeamertemplate{headline}{}
+  \maketitle
+  \endgroup
+\begin{frame}{Sumário}
 \tableofcontents
 \end{frame}
 
-	Aulas
 
-	Slides
-  		FQ
-  		Outros
-  		QG
-  		QO
-  		img
-  		ltximg
-  		styles
-   		Hidrocarbonetos.pdf
-   Makefile
-   		Potencial\textsubscript{Eletrodo.pdf}
-   		appendixnumberbeamer.sty
-   		beamercolorthemeZurich.sty
-   		beamercolorthemeflux.sty
-   		beamercolorthememinflat.sty
-   		beamerfontthememinflat.sty
-   		beamerinnerthemeZurich.sty
-   		beamerouterthemeZurich.sty
-   		beamerthemeZurich.sty
-   		beamerthememinflat.sty
-   		diagrama.tex
-   		extra.org
-   		handoutWithNotes.sty
-   main.aux
-   main.fdb\textsubscript{latexmk}
-   main.fls
-   		main.log
-   main.nav
-   		main.org
-   main.out
-   		main.pdf
-   main.snm
-   		main.tex
-   main.toc
-   		mol2chemfig.sty
-   	󰸭	output.png
-   		output.svg
-   		packages.org
-   		texput.log
+
+
+
+
+\section{Hidrocarbonetos Ramificados}
+\label{sec:orgfd05147}
+
+\begin{frame}[label={sec:org5928939}]{Hidrocarbonetos Ramificados}
+\begin{myex}{Ramificação}
+\begin{itemize}
+\item A expressão \alert{grupos substituintes orgânicos} ou, simplesmente \alert{grupos orgânicos} é usada para designar qualquer grupo de átomos que apareça com freqüência nas moléculas orgânicas.
+\end{itemize}
+
+\begin{center}
+\begin{tabular}{lll}
+\chemfig{-CH_3} &  & \chemfig{-CH_2-CH_3}\\[0pt]
+ &  & \\[0pt]
+\quad metil &  & \qquad    etil\\[0pt]
+\end{tabular}
+\end{center}
+
+
+\end{myex}
+\end{frame}
+
+
+\begin{frame}[allowframebreaks]{Grupos substituintes}
+\begin{longtblr}[theme=fancy,
+    caption = {Grupos substituintes orgânicos formados por carbono e hidrogênio},
+    %note{a} = {It is the first footnote.},
+    ]{
+        colspec = {c c c c }, colsep = 2mm, hlines = {2pt, white},
+        %row{odd} = {azure8}, row{even} = {gray8},
+        row{1,3,5,7,10,13,16} = {1.5em,azure3,fg=white,font=\bfseries\sffamily},
+        %row{12} = {bg=gray8, font=\bfseries},
+        %rowsep=.2cm,        
+    }
+ \hline
+     % Radical & Estrutura & Radical & Estrutura   \\
+    \SetCell[c=4]{m,8cm} 1 carbono && \\ 
+    & metil &  & \chemfig{-CH_3}  \\ \hline
+    \SetCell[c=4]{m,8cm} 2 carbonos && \\   
+    & etil & \chemfig{-CH_2-CH_3} \\  \hline 
+    \SetCell[c=4]{m,8cm} 3 carbonos &&  \\ 
+    propril &  \chemfig{-CH_2-CH_2-CH_3}  & isopropil &  \chemfig{-CH([:-90]-CH_3)-CH_3}  \\ \hline 
+    \pagebreak
+     \SetCell[c=4]{m,8cm} 4 carbonos && \\ %\hline
+     %\pagebreak 
+    butil &  \chemfig{-CH_2|{(CH_2)_2}CH_3}  & isobutil &  \chemfig{-CH_2-CH([:-90]-CH_3)-CH_3} \\ \hline 
+    \emph{s}-butil (\emph{sec}-butil) &  \chemfig{-CH([:-90]-CH_3)-CH_2CH_3} & \emph{t}-butil (\emph{terc}-butil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_3}
+      \\ \hline 
+     \pagebreak
+    \SetCell[c=4]{m,8cm} 5 carbonos &&& \\
+     pentil &  \chemfig{-CH_2|{(CH_2)_3}CH_3} & isopentil &  \chemfig{-CH_2-CH_2-CH([:-90]-CH_3)-CH_3} \\  \hline
+     neopentil & \chemfig{-CH_2-C([:-90]-CH_3)([:90]-CH_3)-CH_3}  & \emph{t}-pentil (\emph{terc}-pentil) & \chemfig{-C([:90]-CH_3)([:-90]-CH_3)-CH_2-CH_3}\\  \hline 
+      \pagebreak
+     \SetCell[c=4,]{m,8cm}Outros grupos & && \\
+      vinil ou etenil & \chemfig{-CH=CH_2}   & isopropenil & \chemfig{-C([:-90]-CH_3)=CH_2}\\ \hline
+      propenil & \chemfig{-CH=CH-CH_3}  & ali ou propen-2-il & \chemfig{-CH_2-CH=CH_2}\\ \hline 
+      \pagebreak
+   \SetCell[c=4,]{m,10cm} Aromáticos &&& \\
+    fenil & \chemfig{-(*6(-=-=-=))}  & naft-1-il & \chemfig{*6(-=(*6(-=-=(-)--))-=-=)}\\ \hline
+    benzil & \chemfig{-CH_2-(*6(-=-=-=))} & naft-2-il & \chemfig{*6(-=(*6(-=-(-)=--))-=-=)}\\
+      \hline 
+\end{longtblr}
+\end{frame}
+
+\begin{frame}[allowframebreaks]{Hidrocarbonetos Ramificados - Cadeia Principal}
+\begin{mybox}{Definição}
+\begin{itemize}
+\item Cadeia principal é a maior seqüência de carbonosque contenha as ligações duplas
+e triplas (se houver). Em caso de duas sequencias igualmente longas, é a mais
+ramificada. Os carbonos que não fazem parte da cadeia principal pertencem às ramificações.
+\end{itemize}
+
+\end{mybox}
+
+
+
+%%% 1 exemplo
+
+\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{1\textsuperscript{0} Exemplo}
+ A cadeia principal é a maior sequencia de carbonos
+
+\vspace{.5cm}
+\schemestart
+\chemfig{H_3C-CH_2-CH([:-90]-CH_3)-CH_2-CH_2-CH_3}
+\arrow(.mid east--.mid west){->}[,1,thick]
+\chemfig{@{A}C-C-C([:-90]-@{C}C)-C-C-C{}@{B}}
+\chemmove{
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(C)]{}; 
+  \node[text width=3cm,blue] at (-1,.5) {Cadeia Principal};
+  \node[text width=3cm,red] at (-2,-1.2) {Ramificação};
+  }  
+\schemestop
+\end{bclogo}
+
+%%% 2 exemplo
+
+\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{2\textsuperscript{0} Exemplo}
+A cadeia principal nem sempre está na horizontal 
+
+\vspace{.5cm}
+\schemestart
+\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH([:-90]-CH_3)-CH([:90]-CH_2-CH_2([:0]-CH_3))-CH_2-CH_3}
+\arrow(.mid east--.mid west){->}[,1,thick]
+\chemfig{@{J}C-@{A}C([:-90]-C-C@{B})-C([:-90]-@{X}C)-@{Z}C([:90]-C-@{E}C([:0]-C@{H}))-@{Q}C-C@{R}}
+\chemmove{
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (Z)]{};
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(Z) (E)]{};
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(E) (H)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X)]{}; 
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(J)]{}; 
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Q) (R)]{}; 
+  \node[text width=3cm,blue] at (0.1,1) {Cadeia Principal};
+  \node[text width=3cm,red] at (-1,-1.2) {Ramificação};
+  }  
+\schemestop 
+
+
+\end{bclogo}
+
+%%% 3 exemplo
+
+ \begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{3\textsuperscript{0} Exemplo}
+  No caso de duas ou mais sequências igualmente longas, a cadeia principal é a mais ramificada
+
+  \vspace{.3cm}
+  \schemestart
+  \chemfig{H_3C-C([:90]-CH_3)([:-90]-CH_3)-CH([:-90]-CH([:0]-CH_3)-CH_3)-CH_2-CH_3}
+  \hspace{2cm}
+  \chemfig{@{A}C-C([:90]-@{G}C)([:-90]-@{H}C)-@{B}C@{X}([:-90]-C([:0]-@{F}C)-@{Z}C)-@{Q}C-C@{R}}
+  \chemmove{
+  %\node[text width=3cm,blue] at (2.0 ,0) (A) {buta-1,2-dieno};
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+  \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(X) (Z)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Q) (R)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G)]{};
+  \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(H)]{};
+  \node[text width=3cm,blue] at (-.5,0.5) {\scriptsize cadeia principal};
+  \node[text width=3cm,red] at (1.8,-.1) {\scriptsize 4  Ramificações};
+  }
+  \schemestop
+  
+  \vspace{.3cm}
+  
+   \schemestart
+   \chemfig{@{A}C-C([:90]-@{F}C)([:-90]-@{G}C)-C([:-90]-@{X}C([:0]-C@{W})-C@{Y})-C-@{B}C}
+   \chemmove{
+   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X) (Y)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(X) (W)]{}; 
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G)]{};
+   \node[text width=3.5cm,black] at (0,.5) {\scriptsize Não é cadeia principal};
+   \node[text width=3cm,red] at (-1,-2) {\scriptsize 3 Ramificações};
+    }
+   \schemestop
+   %%%
+   \hspace{3.5cm}
+   \schemestart
+   \chemfig{@{D}C-@{A}C([:90]-@{E}C)([:-90]-C@{B})-@{J}C([:-90]-C([:0]-@{F}C)-C@{M})-C-C@{K}}
+   \chemmove{
+   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(J) (K)]{};
+   \node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(J) (M)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (B)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (D)]{};
+   \node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A) (E)]{};
+   \node[text width=4.5cm,black] at (2.5,0) {\scriptsize Não é a cadeia principal};
+   \node[text width=3cm,red] at (-3,-0.5) {\scriptsize 2 Ramificações};  
+   }
+   \schemestop 
+ 
+\end{bclogo}
+
+%%% 4 exemplo
+ 
+
+\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{4\textsuperscript{0} Exemplo}
+\begin{itemize}
+\item Podem existir duas ou mais cadeias equivalentes, neste caso:
+\end{itemize}
+\vspace{.3cm}
+\schemestart
+\chemfig{H_3C-CH([:-90]-CH_3)-CH_2-CH_3}
+\arrow(nph.mid east--.south west){->}[45]
+\chemfig{@{A}C-C([:-90]-@{W}C)-C-C@{B}}
+\chemmove{
+\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(W)]{}; 
+\node[text width=3cm,blue] at (-.5,.5) {\small cadeia principal};
+\node[text width=3cm,red] at (0.3,-.7) {\small ramificação};
+}
+\arrow(@nph.mid east--.north west){->}[-45]
+\chemfig{@{Z}C-@{D}C([:-90]-C@{F})-C-C@{E}}
+\chemmove{
+\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(D) (E)]{};
+\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(D) (F)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(Z)]{};
+\node[text width=3cm,blue] at (-.5,.5) {\small cadeia principal};
+\node[text width=3cm,red] at (-2,-.5) {\small ramificação};
+%  
+}
+\schemestop
+\end{bclogo}
+
+
+
+%%% 5 exemplo
+
+\begin{bclogo}[logo=\bcinfo, noborder=true, barre=none]{5\textsuperscript{0} Exemplo}
+
+\schemestart
+\chemfig{H_2C=CH-CH([:-90]-CH_2-CH_2-CH_3)-CH([:-90]-CH_3)-CH_2-CH_3}
+\arrow(.mid east--.mid west){->}[,1,thick]
+\chemfig{@{A}C=C-C([:-90]-@{G}C-C-C@{H})-C([:-90]-@{F}C)-C-C@{B}}
+\chemmove{
+\node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(F)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (H)]{};
+\node[text width=3.0cm,blue] at (-1.0,0.5) {cadeia principal};      
+}
+\schemestop 
+
+\vspace{1.2cm}
+
+\schemestart
+\chemfig{C=C-@{B}C([:-90]-C-C-C@{E})-C([:-90]-C)-C-C@{A}}
+\chemmove{
+\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
+\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(B) (E)]{};
+\node[text width=5.0cm,black] at (-2,-2.5) {\scriptsize Não é a cadeia principal pois, apesar de ser a mais longa não contém a \emph{dupla}};
+}
+\schemestop 
+\hspace{3.5cm}
+\schemestart
+\chemfig{@{A}C=C-@{B}C([:-90]-C-C-C@{E})-@{G}C([:-90]-C@{H})-C-C@{J}}
+\chemmove{
+\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(A) (B)]{};
+\node[inner sep=2pt,fill=black,fill opacity=0.2,fit=(B) (E)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (H)]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(G) (J)]{};      
+\node[text width=5.0cm,black] at (-5,-.5) {\scriptsize Não é a cadeia principal pois, apesar de incluir a \emph{dupla} e ter o mesmo comprimento da cadeia principal, é menos ramificada};
+\node[text width=3.0cm,red] at (0.5,-.5) {1 ramificação};
+}
+\schemestop 
+
+\end{bclogo}
+\end{frame}
+
+
+\section{Nomeclatura}
+\label{sec:org6d61e33}
+
+\begin{frame}[label={sec:org9e64f4a}]{Nomenclatura}
+\begin{myrule}{Regras}
+
+\begin{itemize}
+\item Localize a cadeia principal.
+
+\item Numere os carbonos da cadeia principal. Para decidir por qual extremidade deve começar a numeração, baseia-se nos seguintes critérios:
+
+\item Se a cadeia for \alert{insaturada}, comece pela extremidade que apresente \alert{insaturação} mais próxima a ela.
+
+\item Se a cadeia for \alert{saturada}, comece pela extremidade que tenha uma \alert{ramificação} mais próxima a ela.
+
+\item Escreva o número de localização da ramificação e, a seguir, separando com um hífen, o nome do grupo orgânico que corresponde à ramificação.
+
+\item Finalmente, escreva o nome do hidrocarboneto correspondente à cadeia principal, separando-o do nome da ramificação por um hífen
+\end{itemize}
+
+\end{myrule}
+\end{frame}
+
+
+\section{Nomenclatura Exemplos}
+\label{sec:orgf9ead56}
+
+\begin{frame}[allowframebreaks]{Nomenclatura Exemplos}
+%% 1
+\begin{myrule}{Exemplo 1}
+\vspace{1cm}
+\schemestart
+\chemname{\chemfig{H_3\mcfabove{C}{\mcfatomno{5}}-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{3}}H_2-\mcfabove{C}{\mcfatomno{2}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{1}}H_3}}{\alert{ 2-metil-pentano}}
+\chemmove{
+\node[text width=6cm,black] at (4,-1) {4-metil-pentano está incorreto};  
+\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Extremidade mais próxima da ramificação};
+    }
+\schemestop
+\end{myrule}
+
+%%% 2
+\begin{myrule}{Exemplo 2}
+\vspace{1cm}
+\schemestart
+\chemname{
+\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_2-\mcfabove{C}{\mcfatomno{6}}H_3}}{\alert{3-metil-hexano}}
+\chemmove{
+\node[text width=6cm,black] at (4,-1) {4-metil-hexano está incorreto};  
+\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Extremidade mais próxima da ramificação};
+    }
+\schemestop
+\end{myrule}
+
+%% 3
+\begin{myrule}{Exemplo 3}
+\vspace{1cm}
+\schemestart
+\chemname{
+\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}}{\alert{3-metil-pentano}}
+\chemmove{
+%\node[text width=6cm,black] at (4,-1) {4-metil-hexano está incorreto};  
+\node[ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {A numeração pode ser em qualquer sentido};
+    }
+\schemestop
+\end{myrule}
+%% 4
+\begin{myrule}{Exemplo 4}
+Se houver mais de um substituinte, deve-se numerar a cadeia principal começando pela extremidade da qual haja uma ramificação mais próxima.
+
+\vspace{1.5cm}
+\schemestart
+\chemname{
+\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}}{\alert{2,3-dimetil-pentano}}
+\chemmove{
+\node[text width=5cm,ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Segue e menor numeração para o radicais usar vírgula para ponto e hífen para os nomes};
+    }
+\schemestop
+\end{myrule}
+
+%%% 5
+\begin{myrule}{Exemplo 5}
+\vspace{1cm}
+\schemestart
+\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{\hspace{.2cm}2}}([:-90]-CH_3)([:90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H_2-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}
+\chemmove{
+ \node[text width=3cm,black] at (3.4 ,0) (A) {\alert{2,2-dimetil-pentano}};
+ \draw[|->] (2.1,-.1)--(2.1,-0.8); % Line 1
+\node[text width=6cm,black] at (4,-1.3) {Note a repetição da númeração \\  use \emph{di} para indicar dois radicais idênticos}; 
+    }
+\schemestop
+\vspace{1cm}
+\end{myrule}
+
+%%% 6
+\begin{myrule}{Exemplo 6}
+\vspace{1cm}
+\schemestart
+\chemfig{H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{\hspace{.2cm}2}}([:-90]-CH_3)([:90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H_3}
+\chemmove{
+ \node[text width=7cm,black] at (4.4 ,0) (A) {\alert{2,2,3-dimetil-pentano}};
+ \node[text width=7cm,black] at (4.4 ,-1) (A) {(3,3,4-trimetil-pentano está incorreto)};
+}
+\schemestop
+\end{myrule}
+%%%%% 7 
+\begin{myrule}{Exemplo 7}
+\vspace{1cm}
+\schemestart
+\chemfig{(!\nobond\chemabove[1.2ex]{}{1}{})(!\nobond\chemabove[3.9ex]{}{4}{})CH_3-(!\nobond\chemabove[1.2ex]{}{2}{})(!\nobond\chemabove[3.9ex]{}{3}{})CH([:-90]-CH_3)-(!\nobond\chemabove[1.2ex]{}{3}{})(!\nobond\chemabove[3.9ex]{}{2}{})CH([:-90]-CH_3)-(!\nobond\chemabove[1.2ex]{}{4}{})(!\nobond\chemabove[3.9ex]{}{1}{})CH_3}
+\chemmove{
+\node[text width=3cm,black] at (-1 ,-1.5) (A) {\alert{2,3-dimetil-butano}};
+\node[text width=5cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(.5,0)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,0) {Ambas as numerações são equivalentes};
+    }
+\schemestop
+\vspace{1.4cm}
+\end{myrule}
+
+%%%% 8 
+
+\begin{myrule}{Exemplo 8}
+
+\vspace{1cm}
+\schemestart
+\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH_2-CH([:90]-CH_2-CH_2-CH_3)-CH_2-CH_3}
+\chemmove{
+%% Enumerate cadeia
+\node[text width=1cm,blue] at (-4.7 ,-1.4) (A) {\scriptsize 1}; % C1
+\node[text width=1cm,blue] at (-4.7 ,-.6) (A) {\scriptsize 2}; % C2
+\node[text width=1cm,blue] at (-4.3 ,0.4) (A) {\scriptsize 3}; % C3
+\node[text width=1cm,blue] at (-3.3 ,0.4) (A) {\scriptsize 4}; % C4
+\node[text width=1cm,blue] at (-2.5 ,0.3) (A) {\scriptsize 5}; % C5
+\node[text width=1cm,blue] at (-2.5 ,0.9) (A) {\scriptsize 6}; % C6
+\node[text width=1cm,blue] at (-2.5 ,1.5) (A) {\scriptsize 7}; % C7
+\node[text width=1cm,blue] at (-2.5 ,2.3) (A) {\scriptsize 8}; % C8
+%%% Fim numera cadeia
+\node[text width=9cm,black] at (5.6 ,1) (A) {\alert{5-{\bfseries{\color{black}{e}}}til-3-{\bfseries{\color{black}{m}}}etil-octano}};
+%% Seta Nome
+\draw[<-] (1.5, 0.8)--(1.5,0)--(4,0); % seta do e
+\draw[<-] (2.4, 0.8)--(2.4,0); % seta do m
+\node[text width=3cm,black] at (5.8 ,-0) {ordem alfabética: ``e'' vem antes de ``m''};
+\node[text width=3cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4.5,-1)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade que tem a ramificação mais próxima};
+    }
+\schemestop
+\end{myrule}
+
+%%%% 9
+\begin{myrule}{Exemplo 9}
+\vspace{1cm}
+\schemestart
+\chemfig{H_3C-CH([:-90]-CH_2-CH_3)-CH([:90]-CH_3)-C([:-90]-CH([:0]-CH_3)-CH_3)([:90]-CH_2-CH_2-CH_3)-CH_2-CH_3}
+\chemmove{
+%% Enumerate cadeia
+\node[text width=1cm,blue] at (-4.5 ,-1.4) (A) {\scriptsize 1}; % C1
+\node[text width=1cm,blue] at (-4.5 ,-.6) (A) {\scriptsize 2}; % C2
+\node[text width=1cm,blue] at (-4.3 ,0.4) (A) {\scriptsize 3}; % C3
+\node[text width=1cm,blue] at (-3.3 ,0.4) (A) {\scriptsize 4}; % C4
+\node[text width=1cm,blue] at (-2.5 ,0.3) (A) {\scriptsize 5}; % C5
+\node[text width=1cm,blue] at (-2.5 ,0.9) (A) {\scriptsize 6}; % C6
+\node[text width=1cm,blue] at (-2.5 ,1.5) (A) {\scriptsize 7}; % C7
+\node[text width=1cm,blue] at (-2.5 ,2.3) (A) {\scriptsize 8}; % C8
+%%% Fim numera cadeia
+\node[text width=9cm,black] at (5.6 ,1) (A) {\alert{5-{\bfseries{\color{black}{e}}}til-5-{\bfseries{\color{black}{i}}}spopropil-3,4-di{\bfseries{\color{black}{m}}}etil-octano}};
+%% Seta Nome
+\draw[<-] (1.5, 0.8)--(1.5,0)--(6,0)--(6,-0.5); % seta do e
+\draw[<-] (2.3, 0.8)--(2.3,0); % seta do i
+\draw[<-] (4.8, 0.8)--(4.8,0); % seta do m
+\node[text width=4cm,black] at (5.2 ,-.9) {ordem alfabética: ``e'' vem antes de ``i'' que vem antes de ``m''};
+    }
+\schemestop
+\end{myrule}
+
+
+
+\begin{myrule}{Exemplo 10}
+\vspace{.5cm}
+ \schemestart
+ \chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{4}}-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
+ \chemmove{
+ \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+ \node[text width=4cm,red] at (7.7 ,0) {3-metil-but-1-eno};
+ \draw[<-] (5.8, -.2)--(5.8, -1);
+ \node[text width=.5cm,black] at (5.3 ,-1.3) {localiza};
+ \node[text width=3cm,black] at (5.8 ,-1.7) {a ramificação};
+ \draw[<-] (7.6, -.2)--(7.6, -1);
+ \node[text width=.5cm,black] at (7.4 ,-1.3) {localiza};
+ \node[text width=3cm,black] at (8.8 ,-1.7) {a insaturação};
+ \node[text width=4cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
+}
+\schemestop
+\vspace{2cm}
+%
+\end{myrule}
+%%%% Ex. 11
+\begin{myrule}{Exemplo 11}
+ \vspace{.5cm}
+ \schemestart
+ \chemfig{@{A}\mcfabove{C}{\mcfatomno{5}}H_3-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
+ \chemmove{
+ \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+ \node[text width=4cm,red] at (5.7 ,0) {3-metil-pent-1-eno};
+ \draw[<-] (3.8, -.2)--(3.8, -1);
+ \node[text width=.5cm,black] at (3.5 ,-1.3) {localiza};
+ \node[text width=3cm,black] at (4.1 ,-1.7) {a ramificação};
+ \draw[<-] (5.7, -.2)--(5.7, -1);
+ \node[text width=.5cm,black] at (5.5 ,-1.3) {localiza};
+ \node[text width=3cm,black] at (6.5 ,-1.7) {a insaturação};
+ \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
+}
+\schemestop
+\vspace{3cm}
+\end{myrule}
+
+
+%%% Ex 12
+
+\begin{myrule}{Exemplo 12}
+ \vspace{.5cm}
+ \schemestart
+ \chemfig{@{A}\mcfabove{C}{\mcfatomno{5}}H_3-\mcfabove{C}{\mcfatomno{4}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{3}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{2}}H=\mcfabove{C}{\mcfatomno{1}}H_2@{B}{}}
+ \chemmove{
+ \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+ \node[text width=4cm,red] at (3.7 ,0) {3,4-dimetil-pent-1-eno};
+ %\draw[<-] (3.8, -.2)--(3.8, -1);
+ %\node[text width=.5cm,black] at (3.5 ,-1.3) {localiza};
+ %\node[text width=3cm,black] at (4.1 ,-1.7) {a ramificação};
+ %\draw[<-] (5.7, -.2)--(5.7, -1);
+ %\node[text width=.5cm,black] at (5.5 ,-1.3) {localiza};
+ %\node[text width=3cm,black] at (6.5 ,-1.7) {a insaturação};
+ \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-.8,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]0,-3) {\small Extremidade mais próxima da insaturação};
+}
+\schemestop
+\vspace{2cm}
+\end{myrule}
+
+
+%%% Ex 13
+
+\begin{myrule}{Exemplo 13}
+ \vspace{.5cm}
+ \schemestart
+ \hspace{4cm}\chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}~\mcfabove{C}{\mcfatomno{3}}-\mcfabove{C}{\mcfatomno{4}}H_2-\mcfabove{C}{\mcfatomno{5}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{6}}H_3@{B}}
+ \chemmove{
+ \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+ \node[text width=8cm,red] at (5,0){5-metil-hex-2-ino};
+ \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]-8,-1.5) {\small Extremidade mais próxima da insaturação};
+}
+\schemestop
+\vspace{.5cm}
+\end{myrule}
+
+\begin{myrule}{Exemplo 14}
+ \vspace{.5cm}
+ \schemestart
+ \hspace{4cm}\chemfig{@{A}H_3\mcfabove{C}{\mcfatomno{1}}-\mcfabove{C}{\mcfatomno{2}}~\mcfabove{C}{\mcfatomno{3}}-\mcfabove{C}{\mcfatomno{4}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{5}}H([:-90]-CH_3)-\mcfabove{C}{\mcfatomno{6}}H_3@{B}}
+ \chemmove{
+ \node[inner sep=2pt,fill=blue,fill opacity=0.2,fit=(A) (B)]{};
+ \node[text width=8cm,red] at (5,0){4,5-dimetil-hex-2-ino};
+ \node[text width=2cm, ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-4,-.05)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]-8,-1.5) {\small Extremidade mais próxima da insaturação};
+}
+\schemestop
+\vspace{.5cm}
+\end{myrule}
+
+
+ \begin{myrule}{Exemplo 15}
+ \vspace{.5cm}
+ \schemestart
+ \chemfig{H_3C-C([:90]=CH_2)-CH([:-90]-CH_2-CH_3)-CH_3}
+ \chemmove{
+ \node[text width=1cm,blue] at (-2.1 ,.8) {\scriptsize 1}; % C1
+ \node[text width=1cm,blue] at (-2.1 ,.2) {\scriptsize 2}; % C2
+ \node[text width=1cm,blue] at (-1.2 ,.3) {\scriptsize 3}; % C3
+ \node[text width=1cm,blue] at (-1.4 ,-.6) {\scriptsize 4}; % C4
+ \node[text width=1cm,blue] at (-1.4 ,-1.3) {\scriptsize 5}; % C5
+ \node[text width=8cm,red] at (5,0){2,3-dimetil-pent-1-eno};
+}
+ \schemestop
+ \end{myrule}
+\end{frame}
+
+
+\section{Hidrocarbonetos cadeia mista}
+\label{sec:orgb590e13}
+
+\begin{frame}[label={sec:org84a1115}]{Hidrocarbonetos cadeia mista}
+\begin{itemize}
+\item Quando um hidrocarboneto possui cadeia mista, a nomenclatura é semelhante as cadeias ramificadas abertas. Veja os exemplos.
+\end{itemize}
+
+\begin{center}
+\chemname{\chemfig{*5(--(-CH_3)---)}}{metil-ciclo-pentano}\af
+\chemname{\chemfig{**6(----(-CH_3)--)}}{metil-benzeno} \af 
+\chemname{\chemfig{**6(--(!\nobond\chembelow[0.5ex]{}{3}{})(-CH_3)-(!\nobond\chemabove[1.4ex]{2}{})-(!\nobond\chemabove[0.2ex]{}{\quad 1})(-CH_3)--)}}{1-3-dimetil-benzeno}
+ \end{center}
+\end{frame}
+
+\begin{frame}[label={sec:org26fe10d}]{Hidrocarbonetos cadeia mista}
+\begin{itemize}
+\item Quando há dois substituintes diferentes, eles devem ser citados em \alert{ordem alfabética. O número 1 é dado ao subtituinte citado primeiro} de acordo com a ordem alfabética.
+\end{itemize}
+
+
+\schemestart
+\chemfig{**6(---(-CH_3)-(-CH_2([:0]-CH_3))--)} \af 
+\chemfig{*5(--(-CH_2-CH_3)--(-H_3C)-)} \af
+\chemfig{CH_2([:90]-(*6(---(-CH_3)---)))-CH_2-CH_3}
+\chemmove{
+	\node[text width=1cm,blue] at (-12.8 ,.8) {\scriptsize 1}; % C1	
+	\node[text width=1cm,blue] at (-12.3, .38) {\scriptsize 2}; % C1
+	\node[text width=5cm,black] at (-11.5 ,-1) {1-\alert{e}til-2-\alert{m}etil-benzeno}; % C1	
+	\node[text width=1cm,blue] at (-8.2 ,.27) {\scriptsize 1}; % C1		
+	\node[text width=1cm,blue] at (-7.57 ,.72) {\scriptsize 2}; % C1
+	\node[text width=1cm,blue] at (-7.25 ,.01) {\scriptsize 3}; % C1
+	\node[text width=5cm,black] at (-7.3 ,-1) {1-\alert{e}til-3-\alert{m}etil-ciclo-pentano}; % C1
+	\node[text width=1cm,blue] at (-2.35 ,1.8) {\scriptsize 1}; % C1
+	\node[text width=1cm,blue] at (-1.9 ,1.56) {\scriptsize 2}; % C1
+	\node[text width=1cm,blue] at (-1.9 ,1.0) {\scriptsize 3};
+	\node[text width=1cm,blue] at (-2.35 ,0.59) {\scriptsize 4};
+	\node[text width=5cm,black] at (-1.7 ,-1) {1-\alert{m}etil-4-\alert{p}ropil-ciclo-hexano}; % C1
+	\draw[->] (-13.6,-2.)--(-13.6,-1.1);
+	\draw[->] (-12.6,-2.)--(-12.6,-1.1);
+  \node[text width=6cm,col8] at (-11.6 ,-2.5) {ordem alfabética: ``e'' antes de ``m''};
+  	\draw[->] (-3.8,-2.)--(-3.8,-1.1);
+  	\draw[->] (-2.7,-2.)--(-2.7,-1.1);
+  \node[text width=6cm,col8] at (-1.7 ,-2.5) {ordem alfabética: ``m'' antes de ``p''};
+}
+\schemestop
+\end{frame}
+
+\begin{frame}[label={sec:org8968963}]{}
+\begin{itemize}
+\item Se houver mais de dois substituintes, eles serão citados em \alert{ordem alfabética. O número 1 deve ser dado ao substituinte que permitir que um segundo substituintes receba o menor número possível}
+\end{itemize}
+
+\hspace{.5cm}\chemname{\chemfig{CH_3-[:273,,1]-[:327]-[:255]-[:183]-[:111](-[:39])(-[:223,,,2]H_3C)-[:155,,,2]H_3C}}{1,1,2-trimetil-ciclo-pentano}\af 
+\chemname{\chemfig{*6((-CH_2([:180]-H_3C))--(-CH_3)-(-([:0]CH_2-CH_2-CH_3))---)}}{4-etil-2-metil-1-propil-ciclo-hexano}\\
+\vspace{.2cm}
+\chemname{\chemfig{**6(-(-CH_3)--(-CH_3)-(-CH_3)--)}}{1,2,4-trimetil-benzeno} \af \af 
+\chemname{\chemfig{**6(-(-C_2H_5)--(-C_2H_5)-(-CH_3)--)}}{2,4-dietil-1-metil-benzeno}
+\chemmove{
+	\node[text width=1cm,blue] at (-6.3 ,3.2) {\scriptsize 1}; % C1	
+	\node[text width=1cm,blue] at (-5.8 ,3.5) {\scriptsize 2}; % C1	
+	%%%
+	\node[text width=1cm,blue] at (-0.28 ,4.65) {\scriptsize 1}; % C1
+	\node[text width=1cm,blue] at (-0.11 ,3.9) {\scriptsize 2}; % C1
+	\node[text width=1cm,blue] at (-0.68 ,3.36) {\scriptsize 3}; % C1
+	\node[text width=1cm,blue] at (-1.3 ,3.9) {\scriptsize 4}; % C1
+	%%%%
+	\node[text width=1cm,blue] at (-7.3 ,0.98) {\scriptsize 1}; % C1
+	\node[text width=1cm,blue] at (-6.98 ,0.66) {\scriptsize 2}; % C1
+	\node[text width=1cm,blue] at (-6.8 ,0.1) {\scriptsize 3}; % C1
+	\node[text width=1cm,blue] at (-7.3 ,-0.4) {\scriptsize 4}; % C1
+	%%%
+	\node[text width=1cm,blue] at (-1.2 ,0.98) {\scriptsize 1}; % C1
+	\node[text width=1cm,blue] at (-0.91 ,0.66) {\scriptsize 2}; % C1
+	\node[text width=1cm,blue] at (-0.78 ,0.1) {\scriptsize 3}; % C1
+	\node[text width=1cm,blue] at (-1.2 ,-0.4) {\scriptsize 4}; % C1
+	\node[text width=4cm,ellipse callout,rounded corners,fill=col7,callout absolute pointer={(-0,0.8)}, callout pointer width=1cm] at ([shift={(.5cm,1cm)}]3,-1) {\small No exemplo ao lado -\ch{C2H5} é uma maneira de representar o grupo etil $\rm -CH_2-CH_3$};
+}
+\end{frame}
+
+\begin{frame}[label={sec:org8bba77d}]{}
+\begin{itemize}
+\item Quando uma molécula de benzeno que contém \alert{dois} grupos substituintes ligados ao anel, podemos usar o prefixo \emph{orto}, \emph{meta} e \emph{para}.
+\end{itemize}
+
+\begin{bclogo}[logo=\bcattention, noborder=true, barre=none]{Atenção}
+Os prefixos \emph{orto}, \emph{meta} e \emph{para} podem ser \alert{utilizados apenas quando um anel benzênico possuir dois grupos ligados a ele ligados:}\\[0pt]
+
+\(\bullet\) \emph{orto} \alert{indica 1, 2}; \quad \(\bullet\) meta \alert{indica 1, 3}; \quad \(\bullet\) \emph{para} \alert{indica 1, 4}
+\end{bclogo}
+
+\chemname{\chemfig{**6(---(-CH_3)-(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{orto:}indica posição 1,2}} \af  
+\chemname{\chemfig{**6(--(-CH_3)--(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{meta:}indica posição 1,3}} \af
+\chemname{\chemfig{**6(-(-CH_3)---(-CH_3)--)}}{\emph{orto}-dimetil-benzeno \\ {\color{col8} \emph{para:}indica posição 1,4}} 
+\end{frame}
+
+
+\begin{frame}[label={sec:orgbc633db}]{Cadeia Mista - Nomenclatura trivial}
+\begin{itemize}
+\item Alguns exemplos de nomes triviais de hidrocarbonetos aromáticos são: \emph{tolueno, orto-xileno, meta-xileno} e \emph{para-xileno}.
+\end{itemize}
+
+
+\chemname{\chemfig{**6(---(-CH_3)---)}}{tolueno} \af  
+\chemname{\chemfig{**6(---(-CH_3)-(-CH_3)--)}}{\emph{orto}-xileno} \af  
+\chemname{\chemfig{**6(--(-CH_3)--(-CH_3)--)}}{\emph{meta}-xileno} \af
+\chemname{\chemfig{**6(-(-CH_3)---(-CH_3)--)}}{\emph{para}-xileno} 
+\end{frame}
+
+
+\begin{frame}[label={sec:org880b84d}]{Cadeis Mistas - Outros exemplos}
+\chemname{\chemfig{**6(---(-CH_3)-(-C_2H_5)--)}}{\emph{orto}-etil-metil-benzeno} \af  
+\chemname{\chemfig{**6(--(-CH_3)--(-C_2H_5)--)}}{\emph{meta}-etil-metil-benzeno} \af
+\chemname{\chemfig{**6(-(-CH_3)---(-C_2H_5)--)}}{\emph{para}-etil-metil-benzeno} \af
+\chemname{\chemfig{**6(-(-C_2H_5)--(-C_2H_5)-(-CH_3)--)}}{2,4-dietil-1-metil-benzeno} 
+
+\begin{itemize}
+\item Os prefixos \emph{\alert{orto}}, \emph{\alert{meta}} e \emph{\alert{para}} vêm do grego e podem ser traduzidos, respectivamente, por \emph{''diretamente''}, \emph{``depois de''} e \emph{``mais longe de''}
+\end{itemize}
+\end{frame}
+
+
+
+
+
+\begin{frame}[label={sec:orgcb708db}]{Fim da Aula}
+\begin{tikzpicture}
+\node[graduate,sword, devil, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
+\end{tikzpicture}
+\begin{center}
+\begin{tabular}{ccc}
+Download Aula & & Lista de Exercícios \\
+ \qrcode[height=2in]{https://mark.nl.tab.digital/s/yWAtd5C8mjKjdQa} & & \qrcode[height=2in]{https://mark.nl.tab.digital/s/6kSsDYwW4icCK9X}\\
+ \end{tabular}
+ \end{center}
+\end{frame}
 \end{document}
