add xsim package

--- a/main.org
+++ b/main.org
@@ -8,11 +8,13 @@
 #+LATEX_CLASS_OPTIONS: [presentation,professionalfonts,smaller,aspectratio=169]
 
 #+BEAMER_THEME: minflat
+
+#+LATEX_HEADER: \input{packages2.tex}
+
 #+LATEX_HEADER: \date{}
 #+LATEX_HEADER:% \usetheme{minflat}
 
 
-#+INCLUDE: "packages.org"
 
 #+COLUMNS: %45ITEM %10BEAMER_ENV(Env) %10BEAMER_ACT(Act) %4BEAMER_COL(Col)
 
@@ -21,57 +23,4 @@
 
 
 
-
-
-#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosIII.org"              
-
-
-
-
-#+begin_comment
-
-
-
-     
-{
-\setbeamercolor{background canvas}{bg=}
-\includepdf[pages=1-33]{QG/GeometriaMolecular/GeometriaMolecular2.pdf}
-}
-
-
-
-#+INCLUDE: "FQ/Eletroquimica/BalanceamentoRedox2.org"
-
-
-
-#+INCLUDE: "FQ/Nox/Nox.org"
-
-#+INCLUDE: "FQ/Eletroquimica/BalanceamentoRedox.org"
-
-
-#+INCLUDE: "QO/Proteinas/Carboidratos.org"
-
-
-
-
-
-#+INCLUDE: "QG/SeparacaoMisturas/SeparacaoMisturas.org"
-
-
-
-
-#+INCLUDE: "FQ/Radioatividade/Radioatividade.org"
-
-#+end_comment
-
-
-
-
-
-#+begin_comment
-minflat
-BEAMER_THEME: Zurich [bullet=circle,bigpagenumber,topline=true,]
-BEAMER_THEME: Zurich [bullet=circle,bigpagenumber,topline=true,]
-[presentation,professionalfonts,compress,smaller,aspectratio=169]
-[xetex,notheorems,hyperref={pdfpagelabels=true},xcolor={table]
-#+end_comment
+#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosIII.org"
