--- a/beamerfontthememinflat.sty
+++ b/beamerfontthememinflat.sty
@@ -18,11 +18,11 @@
 %\setdefaultlanguage{portuguese}
 
 %\usefonttheme{professionalfonts}
-\usepackage{fontspec,unicode-math}
+%\usepackage{fontspec,unicode-math}
 \setsansfont[Scale=.75,Ligatures={TeX},BoldFont={Museo Sans-500}]{Museo Sans-300}
 
 %\setmathfont{Latin Modern Math}
-%\setmathfont{Asana-Math}
+\setmathfont{Asana-Math}
 %\setmathfont{MinionPro-Regular}
 
 
