--- a/packages.org
+++ b/packages.org
@@ -1,5 +1,28 @@
-#+LATEX_HEADER:\usepackage[portuguese]{babel}
-#+LATEX_HEADER:\usepackage{xcolor}
+
+#+LATEX_HEADER: %%%% Config X sim for BEAMER
+#+LATEX_HEADER: %\usepackage[portuguese]{babel}
+
+#+LATEX_HEADER:
+#+LATEX_HEADER: 
+#+LATEX_HEADER: %%% PACKAGES 
+#+LATEX_HEADER: \usepackage{amssymb}
+#+LATEX_HEADER: \usepackage{fontawesome}
+#+LATEX_HEADER: \newcounter{paragraph}
+#+LATEX_HEADER: \usepackage{xsim}
+#+LATEX_HEADER: \makeatletter
+#+LATEX_HEADER: \@ifclassloaded{beamer}{%
+#+LATEX_HEADER:  %%% save beamer's `solution' environment as `beamersolution':
+#+LATEX_HEADER:  \let\beamersolution\solution
+#+LATEX_HEADER:  \let\endbeamersolution\endsolution
+#+LATEX_HEADER:  %%% "delete" the `solution' environment:
+#+LATEX_HEADER:  \let\solution\relax
+#+LATEX_HEADER:  \let\endsolution\relax
+#+LATEX_HEADER: }{%
+#+LATEX_HEADER: }%
+#+LATEX_HEADER: \makeatother
+#+LATEX_HEADER: %\usepackage{xcolor} 
+
+
 #+LATEX_HEADER: \usepackage{colortbl}
 #+LATEX_HEADER: \usepackage[tikz]{bclogo}
 #+LATEX_HEADER: \usetikzlibrary{fit,patterns,shadows.blur,shapes,mindmap}
@@ -111,7 +134,7 @@
 #+LATEX_HEADER:  },
 #+LATEX_HEADER:  bal3/.style={
 #+LATEX_HEADER:  circle, minimum size=2pt, inner sep=0pt,fill=yellow,fill opacity=0.5
-#+LATEX_HEADER:  }
+#+LATEX_HEADER:  } 
 #+LATEX_HEADER:}
 #+LATEX_HEADER: \definesubmol\nobond{-[,0.2,,,draw=none]\scriptstyle\color{blue}}
 #+LATEX_HEADER: \newcommand{\re}{\hspace{-1cm}}
@@ -129,3 +152,51 @@
 	
 #+LATEX_HEADER:	\selectlanguage{portuguese}
 #+LATEX_HEADER:	%\UseTblrTemplate{caption-tag}{default}{\bfseries}
+
+
+#+LATEX_HEADER: %% == CUSTOM TEAMPLEATE FOR XSIM == %%  
+#+LATEX_HEADER: \DeclareExerciseEnvironmentTemplate{custom}{%
+#+LATEX_HEADER:  \begin{tcolorbox}[boxrule = 0pt]
+#+LATEX_HEADER:  \tcbox[on line,colback=teal,colframe=teal,coltext=white,size=small]{%
+#+LATEX_HEADER:    \faBook\sffamily\bfseries\
+#+LATEX_HEADER:    \XSIMmixedcase{\GetExerciseName}
+#+LATEX_HEADER:    \GetExerciseProperty{counter}%
+#+LATEX_HEADER:  }\quad
+#+LATEX_HEADER: }{\end{tcolorbox}}
+#+LATEX_HEADER:
+#+LATEX_HEADER: 
+#+LATEX_HEADER: \DeclareExerciseEnvironmentTemplate{custom2}{%
+#+LATEX_HEADER:  \begin{tcolorbox}[boxrule = 0pt]
+#+LATEX_HEADER:  \tcbox[on line,colback=violet,colframe=violet,coltext=white,size=small]{%
+#+LATEX_HEADER:    \faToggleOn\sffamily\bfseries\
+#+LATEX_HEADER:    \XSIMmixedcase{\GetExerciseName}
+#+LATEX_HEADER:    \GetExerciseProperty{counter}%
+#+LATEX_HEADER:  }\quad
+#+LATEX_HEADER: }{\end{tcolorbox}}
+
+
+
+
+#+LATEX_HEADER: \DeclareExerciseType{test}{
+#+LATEX_HEADER:	exercise-env = question ,
+#+LATEX_HEADER:	solution-env = answer ,
+#+LATEX_HEADER:	exercise-template = custom ,
+#+LATEX_HEADER:	solution-template = custom2 ,
+#+LATEX_HEADER:	exercise-name	= Exemplo ,
+#+LATEX_HEADER:	exercises-name = Exemplo ,
+#+LATEX_HEADER:	solution-name = Sol. ,
+#+LATEX_HEADER:	solutions-name = Sol. ,
+#+LATEX_HEADER:	exercise-heading = \textbf ,
+#+LATEX_HEADER:	solution-heading = \textbf
+#+LATEX_HEADER:}
+
+
+#+LATEX_HEADER: \xsimsetup{
+#+LATEX_HEADER:  exercise/within = section,
+#+LATEX_HEADER:  exercise/the-counter =  \arabic{exercise}, 
+#+LATEX_HEADER: %% solution-name = solution,  % used with headings=true
+#+LATEX_HEADER: solution/print=false,
+#+LATEX_HEADER: %print-collection/print=both,
+#+LATEX_HEADER: }
+
+
