--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
-% Created 2024-07-21 Sun 18:58
+% Created 2024-07-21 Sun 20:00
 % Intended LaTeX compiler: lualatex
 \documentclass[presentation,professionalfonts,smaller,aspectratio=169]{beamer}
                 
 
-\input{packages2.tex}
+% \input{packages2.tex}
+%%%% Config X sim for BEAMER
 \date{}
 % \usetheme{minflat}
 \usetheme{minflat}
@@ -31,9 +32,9 @@
 
 
 \section{Hidrocarbonetos Ramificados}
-\label{sec:org20f64be}
+\label{sec:orgc655e16}
 
-\begin{frame}[label={sec:org0299100}]{Hidrocarbonetos Ramificados}
+\begin{frame}[label={sec:orga82d282}]{Hidrocarbonetos Ramificados}
 \begin{myex}{Ramificação}
 \begin{itemize}
 \item A expressão \alert{grupos substituintes orgânicos} ou, simplesmente \alert{grupos orgânicos} é usada para designar qualquer grupo de átomos que apareça com freqüência nas moléculas orgânicas.
@@ -282,9 +283,9 @@ A cadeia principal nem sempre está na horizontal
 
 
 \section{Nomeclatura}
-\label{sec:org30d9885}
+\label{sec:org69808fc}
 
-\begin{frame}[label={sec:org8a6affc}]{Nomenclatura}
+\begin{frame}[label={sec:orga25c3a2}]{Nomenclatura}
 \begin{myrule}{Regras}
 
 \begin{itemize}
@@ -306,7 +307,7 @@ A cadeia principal nem sempre está na horizontal
 
 
 \section{Nomenclatura Exemplos}
-\label{sec:org9fcd756}
+\label{sec:org0baf0e5}
 
 \begin{frame}[allowframebreaks]{Nomenclatura Exemplos}
 %% 1
@@ -563,9 +564,9 @@ Se houver mais de um substituinte, deve-se numerar a cadeia principal começando
 
 
 \section{Hidrocarbonetos cadeia mista}
-\label{sec:org710f3bd}
+\label{sec:org1b4f4d1}
 
-\begin{frame}[label={sec:orgfc7e749}]{Hidrocarbonetos cadeia mista}
+\begin{frame}[label={sec:orgbea15c1}]{Hidrocarbonetos cadeia mista}
 \begin{itemize}
 \item Quando um hidrocarboneto possui cadeia mista, a nomenclatura é semelhante as cadeias ramificadas abertas. Veja os exemplos.
 \end{itemize}
@@ -577,7 +578,7 @@ Se houver mais de um substituinte, deve-se numerar a cadeia principal começando
  \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgeb8a570}]{Hidrocarbonetos cadeia mista}
+\begin{frame}[label={sec:org66c0670}]{Hidrocarbonetos cadeia mista}
 \begin{itemize}
 \item Quando há dois substituintes diferentes, eles devem ser citados em \alert{ordem alfabética. O número 1 é dado ao subtituinte citado primeiro} de acordo com a ordem alfabética.
 \end{itemize}
@@ -610,7 +611,7 @@ Se houver mais de um substituinte, deve-se numerar a cadeia principal começando
 \schemestop
 \end{frame}
 
-\begin{frame}[label={sec:orga42fba3}]{}
+\begin{frame}[label={sec:orgada3b3d}]{}
 \begin{itemize}
 \item Se houver mais de dois substituintes, eles serão citados em \alert{ordem alfabética. O número 1 deve ser dado ao substituinte que permitir que um segundo substituintes receba o menor número possível}
 \end{itemize}
@@ -642,7 +643,7 @@ Se houver mais de um substituinte, deve-se numerar a cadeia principal começando
 }
 \end{frame}
 
-\begin{frame}[label={sec:org8eecaab}]{}
+\begin{frame}[label={sec:org7e058a6}]{}
 \begin{itemize}
 \item Quando uma molécula de benzeno que contém \alert{dois} grupos substituintes ligados ao anel, podemos usar o prefixo \emph{orto}, \emph{meta} e \emph{para}.
 \end{itemize}
@@ -659,7 +660,7 @@ Os prefixos \emph{orto}, \emph{meta} e \emph{para} podem ser \alert{utilizados a
 \end{frame}
 
 
-\begin{frame}[label={sec:orge6c4859}]{Cadeia Mista - Nomenclatura trivial}
+\begin{frame}[label={sec:org41fb849}]{Cadeia Mista - Nomenclatura trivial}
 \begin{itemize}
 \item Alguns exemplos de nomes triviais de hidrocarbonetos aromáticos são: \emph{tolueno, orto-xileno, meta-xileno} e \emph{para-xileno}.
 \end{itemize}
@@ -672,7 +673,7 @@ Os prefixos \emph{orto}, \emph{meta} e \emph{para} podem ser \alert{utilizados a
 \end{frame}
 
 
-\begin{frame}[label={sec:orga1a0605}]{Cadeis Mistas - Outros exemplos}
+\begin{frame}[label={sec:org46a9f1c}]{Cadeis Mistas - Outros exemplos}
 \chemname{\chemfig{**6(---(-CH_3)-(-C_2H_5)--)}}{\emph{orto}-etil-metil-benzeno} \af  
 \chemname{\chemfig{**6(--(-CH_3)--(-C_2H_5)--)}}{\emph{meta}-etil-metil-benzeno} \af
 \chemname{\chemfig{**6(-(-CH_3)---(-C_2H_5)--)}}{\emph{para}-etil-metil-benzeno} \af
@@ -687,7 +688,7 @@ Os prefixos \emph{orto}, \emph{meta} e \emph{para} podem ser \alert{utilizados a
 
 
 
-\begin{frame}[label={sec:orgba0ca18}]{Fim da Aula}
+\begin{frame}[label={sec:orgb548e01}]{Fim da Aula}
 \begin{tikzpicture}
 \node[graduate,sword, devil, minimum size=1cm]{ \bfseries Bons Estudos !!!!};
 \end{tikzpicture}
