--- a/beamerfontthememinflat.sty
+++ b/beamerfontthememinflat.sty
@@ -19,6 +19,8 @@
 
 %\usefonttheme{professionalfonts}
 %\usepackage{fontspec,unicode-math}
+%%\usepackage{unicode-math}
+\usepackage[mathrm=sym]{unicode-math}
 \setsansfont[Scale=.75,Ligatures={TeX},BoldFont={Museo Sans-500}]{Museo Sans-300}
 
 %\setmathfont{Latin Modern Math}
